@@ -20,7 +20,6 @@ import java.io.IOException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -61,7 +60,7 @@ public class DevBundleUtils {
                 return bundleFile.toURI().toURL();
             }
         }
-        return TaskRunDevBundleBuild.class.getClassLoader()
+        return DevBundleUtils.class.getClassLoader()
                 .getResource(Constants.DEV_BUNDLE_JAR_PATH + filename);
     }
 
@@ -100,7 +99,9 @@ public class DevBundleUtils {
             return null;
         }
 
-        return IOUtils.toString(statsJson, StandardCharsets.UTF_8);
+        try (var in = statsJson.openStream()) {
+            return new String(in.readAllBytes(), StandardCharsets.UTF_8);
+        }
     }
 
     private static Logger getLogger() {
