@@ -20,12 +20,10 @@ import java.io.IOException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.vaadin.flow.server.Constants;
-import com.vaadin.flow.server.frontend.scanner.ClassFinder;
 
 /**
  * Helpers related to the production bundle.
@@ -61,9 +59,26 @@ public class ProdBundleUtils {
      * @return stats.json content or {@code null} if not found
      * @throws IOException
      *             if an I/O exception occurs.
+     * @deprecated Use {@link #findBundleStatsJson(File)} instead
      */
+    @Deprecated
     public static String findBundleStatsJson(File projectDir,
-            ClassFinder finder) throws IOException {
+            Object finder) throws IOException {
+        return findBundleStatsJson(projectDir);
+    }
+
+    /**
+     * Get the stats.json for the application specific production bundle or from
+     * the default bundle if it exists.
+     *
+     * @param projectDir
+     *            the project base directory
+     * @return stats.json content or {@code null} if not found
+     * @throws IOException
+     *             if an I/O exception occurs.
+     */
+    public static String findBundleStatsJson(File projectDir)
+            throws IOException {
         String statsFile = "config/stats.json";
         File prodBundleFile = getProdBundle(projectDir);
         if (prodBundleFile.exists()) {
@@ -81,7 +96,7 @@ public class ProdBundleUtils {
             }
         }
 
-        URL statsJson = finder
+        URL statsJson = Thread.currentThread().getContextClassLoader()
                 .getResource(Constants.PROD_BUNDLE_JAR_PATH + statsFile);
         if (statsJson == null) {
             getLogger().warn(
@@ -89,7 +104,9 @@ public class ProdBundleUtils {
             return null;
         }
 
-        return IOUtils.toString(statsJson, StandardCharsets.UTF_8);
+        try (var in = statsJson.openStream()) {
+            return new String(in.readAllBytes(), StandardCharsets.UTF_8);
+        }
     }
 
     private static Logger getLogger() {
