@@ -27,8 +27,6 @@ import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import tools.jackson.databind.JsonNode;
@@ -94,8 +92,8 @@ public class ThemeUtils {
             }
 
             try {
-                String themeJsContent = FileUtils.readFileToString(themeJs,
-                        StandardCharsets.UTF_8);
+                String themeJsContent = java.nio.file.Files.readString(
+                        themeJs.toPath(), StandardCharsets.UTF_8);
                 Matcher matcher = THEME_GENERATED_FILE_PATTERN
                         .matcher(themeJsContent);
                 if (matcher.find()) {
@@ -139,8 +137,10 @@ public class ThemeUtils {
                                 Paths.get(Constants.APPLICATION_THEME_ROOT,
                                         themeName, "theme.json").toString());
                 if (themeJsonUrl != null) {
-                    content = IOUtils.toString(themeJsonUrl,
-                            StandardCharsets.UTF_8);
+                    try (var in = themeJsonUrl.openStream()) {
+                        content = new String(in.readAllBytes(),
+                                StandardCharsets.UTF_8);
+                    }
                 }
             } else {
                 File frontendFolder = FrontendUtils
@@ -148,8 +148,9 @@ public class ThemeUtils {
                 File themeFolder = getThemeFolder(frontendFolder, themeName);
                 File themeJsonFile = new File(themeFolder, "theme.json");
                 if (themeJsonFile.exists()) {
-                    content = FileUtils.readFileToString(themeJsonFile,
-                            StandardCharsets.UTF_8);
+                    content = java.nio.file.Files
+                            .readString(themeJsonFile.toPath(),
+                                    StandardCharsets.UTF_8);
                 }
             }
         } catch (IOException e) {
@@ -193,8 +194,8 @@ public class ThemeUtils {
         if (themeJsonFile.exists()) {
             String content;
             try {
-                content = FileUtils.readFileToString(themeJsonFile,
-                        StandardCharsets.UTF_8);
+                content = java.nio.file.Files.readString(
+                        themeJsonFile.toPath(), StandardCharsets.UTF_8);
                 return Optional.of(JacksonUtils.readTree(content));
             } catch (IOException e) {
                 getLogger().error(
